--- a/src/pages/Work/components/ProjectImage/ProjectImage.scss
+++ b/src/pages/Work/components/ProjectImage/ProjectImage.scss
@@ -26,8 +26,9 @@
     }
 
     position: absolute;
-    left: -70vw;
-    width: auto;
-    height: 40vh;
+    top: 10rem;
+    // left: -70vw;
+    width: 100vw;
+    height: auto;
   }
 }
